# hospital_wait_time_prediction

./: .gitignore  LICENSE  Makefile  README.md  preprocessing_script.py  pyproject.toml  requirements.txt  sagemaker_data_cleaning.py
ART/: best_model.keras  data_analysis.ipynb
IMG/: Box_diagram copy.tiff
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA_analysis.ipynb  ann_model.ipynb  data_analisys.ipynb  data_cleaning.ipynb  hospital_wait_time_workflow.ipynb  ml_workflow.ipynb  regression_model.ipynb  sagemaker.ipynb  xgboost_train.ipynb
notebooks/experiments/: deploy_model.ipynb  hospital_wait_time_workflow.ipynb  train_model.ipynb
scripts/: evaluate.py  lambda_deployer.py  preprocessing.py  process.py  train.py  xgboost_train.py
src/: __init__.py  config.py  pipeline_config.py  pipeline_definition.py  pipeline_setup.py  sagemaker_data_cleaning.py  sagemaker_xgboost_training.py
src/pipeline/: setup.py
src/pipeline_steps/: check_evaluation.py  create_model.py  data_processing.py  deploy_model.py  evaluate_model.py  register_model.py  setup.py  train_model.py
