[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Isaac Menchaca" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "awscli",
    "boto3",
    "gender_guesser",
    "gensim",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mlflow",
    "mkdocs",
    "notebook",
    "numpy",
    "openpyxl",
    "pandas",
    "pip",
    "plotly",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "ruff",
    "sagemaker",
    "scikit-learn",
    "seaborn",
    "tensorflow==2.15.0",
    "tqdm",
    "typer",
    "xgboost",
]
requires-python = "~=3.9.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

